@@ -471,6 +471,15 @@ class ServiceGroup
 
 		return $ret;
 	}
+
+
+	public function API_delete()
+	{
+		$connector = findConnectorOrDie($this);
+		$xpath = $this->getXPath();
+
+		$connector->sendDeleteRequest($xpath);
+	}
 	
 	
 }
