@@ -2,6 +2,7 @@ CHANGELOG
 
 1.3.0
 * introduction of address-edit.php and service-edit.php on same basis than rules-edit.php for objects manipulations
+* API_delete() implemented for Address, AddressGroup, Service, ServiceGroup
 
 version 1.2.3
 * serious bug fixes , upgrade is recommended
